--- a/application.html
+++ b/application.html
@@ -11,12 +11,12 @@
   <div class="header">
     <span><img src="logo.png" alt="logo" style="width:25px;height:25px;"></span>
     <span class="icones">
-      <i class="far fa-envelope"> Contactez nous</i>
-      <i class="fab fa-facebook-square"></i>
-      <i class="fab fa-linkedin"></i>
-      <i class="fab fa-twitter-square"></i>
-      <i class="fab fa-tumblr-square"></i>
-      <i class="fab fa-youtube"></i>
+    <a href=""><i class="far fa-envelope"> Contactez nous</i></a>
+    <a href=""><i class="fab fa-facebook-square"></i></a>
+     <a href=""><i class="fab fa-linkedin"></i></a>
+     <a href=""><i class="fab fa-twitter-square"></i></a>
+     <a href=""><i class="fab fa-tumblr-square"></i></a>
+     <a href=""><i class="fab fa-youtube"></i></a>
     </span>
   </div>
 
@@ -32,7 +32,10 @@
 
   <div class="une">
 
-    <p class="debut">À LA UNE</p>
+    <div class="ligne">
+      <p class="debut">À LA UNE</p>
+      <hr>
+    </div>
 
     <div class="article">
 
@@ -41,7 +44,7 @@
       </div>
 
       <div class="text">
-        <p>Lorem ipsum dolor sit amet, altera sententia est, quae definit amicitiam paribus officiis ac voluntatibus. Hoc quidem est nimis exigue et exiliter.</p>
+        <p><strong>Lorem ipsum dolor sit amet, altera sententia est, quae definit amicitiam paribus officiis ac voluntatibus.</strong></p>
 
         <p>Uut par sit ratio acceptorum et datorum. Divitior mihi.Et affluentior videtur esse vera amicitia nec observare restricte, ne plus reddat quam acceperit; neque enim verendum est, ne quid excidat, aut ne quid in terram defluat, aut ne plus aequo quid in amicitiam congeratur. Atque, ut Tullius ait, ut etiam ferae fame monitae plerumque ad eum locum ubi aliquando pastae sunt revertuntur.</p>
       </div>
@@ -50,28 +53,39 @@
   </div>
 
 
-
-
-
-
-
   <div class="passion">
     <div class="textpassion">
-    <span class="jesuis">JE SUIS </span><span class="passionne">PASSIONNÉ</span>
+    <span class="jesuis">JE SUIS</span><span class="passionne">PASSIONNÉ</span>
     </div>
     <img src="https://images.unsplash.com/photo-1505993093074-a6cd26d43f82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="sky">
   </div>
 
   <div class="actu">
-
+    <div class="une">
+      <div class="ligne">
+        <p class="debut">ACTUALITÉS</p>
+        <hr>
+      </div>
+    </div>
   </div>
 
   <div class="hexa">
+    <div class="une">
+      <div class="ligne">
+        <p class="debut">LEE JEFFRIES</p>
+        <hr>
+      </div>
 
+  <div class="hexagon">
+    <div class="hexTop"></div>
+    <div class="hexBottom"></div>
+  </div>
+
+    </div>
   </div>
 
   <div class="doc">
-
+    <p>Documentation</p>
   </div>
 
   <div class="reseau">
