--- a/application.html
+++ b/application.html
@@ -11,12 +11,12 @@
   <div class="header">
     <span><img src="logo.png" alt="logo" style="width:25px;height:25px;"></span>
     <span class="icones">
-    <a href=""><i class="far fa-envelope"> Contactez nous</i></a>
-    <a href=""><i class="fab fa-facebook-square"></i></a>
-     <a href=""><i class="fab fa-linkedin"></i></a>
-     <a href=""><i class="fab fa-twitter-square"></i></a>
-     <a href=""><i class="fab fa-tumblr-square"></i></a>
-     <a href=""><i class="fab fa-youtube"></i></a>
+      <a href=""><i class="far fa-envelope"> Contactez nous</i></a>
+      <a href=""><i class="fab fa-facebook-square"></i></a>
+      <a href=""><i class="fab fa-linkedin"></i></a>
+      <a href=""><i class="fab fa-twitter-square"></i></a>
+      <a href=""><i class="fab fa-tumblr-square"></i></a>
+      <a href=""><i class="fab fa-youtube"></i></a>
     </span>
   </div>
 
@@ -55,7 +55,7 @@
 
   <div class="passion">
     <div class="textpassion">
-    <span class="jesuis">JE SUIS</span><span class="passionne">PASSIONNÉ</span>
+      <span class="jesuis">JE SUIS</span><span class="passionne">PASSIONNÉ</span>
     </div>
     <img src="https://images.unsplash.com/photo-1505993093074-a6cd26d43f82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="sky">
   </div>
@@ -66,7 +66,31 @@
         <p class="debut">ACTUALITÉS</p>
         <hr>
       </div>
-    </div>
+      </div>
+
+<div class="cards">
+      <div class="card-actu">
+        <img src="https://images.unsplash.com/photo-1514218698632-ef079aeae842?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="portrait1">
+        <div class="card-actu-infos">
+          <div>
+            <h2>LANCEMENT DU PRIX PHOTO TRAMPELIN DE L'ANNEE</h2>
+            <p>Lorem ipsum dolor sit amet, altera sententia est, quae definit amicitiam paribus officiis ac voluntatibus.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-actu">
+        <img src="https://images.unsplash.com/photo-1518715099875-1cc34e55e2c4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="portrait2">
+        <div class="card-actu-infos">
+          <div>
+            <h2>LEE JEFFRIES S'ILLUSTRE ENCORE EN NOIR ET BLANC !</h2>
+            <p>Lorem ipsum dolor sit amet, altera sententia est, quae definit amicitiam paribus officiis ac voluntatibus.</p>
+          </div>
+        </div>
+      </div>
+</div>
+
+
   </div>
 
   <div class="hexa">
@@ -76,10 +100,10 @@
         <hr>
       </div>
 
-  <div class="hexagon">
-    <div class="hexTop"></div>
-    <div class="hexBottom"></div>
-  </div>
+      <div class="hexagon">
+        <div class="hexTop"></div>
+        <div class="hexBottom"></div>
+      </div>
 
     </div>
   </div>
@@ -88,12 +112,12 @@
     <p>Documentation</p>
   </div>
 
-  <div class="reseau">
-
+  <div class="reseaux">
+    <p>Réseaux</p>
   </div>
 
   <div class="footer">
-
+    <p>SOUTENEZ LA PHOTO</p>
   </div>
 
 </body>
