--- a/application.html
+++ b/application.html
@@ -73,8 +73,11 @@
         <img src="https://images.unsplash.com/photo-1514218698632-ef079aeae842?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="portrait1">
         <div class="card-actu-infos">
           <div>
+            <button class="btn-gris">04/03/2020</button>
+            <button class="btn-gris">Actualités</button>
             <h2>LANCEMENT DU PRIX PHOTO TRAMPELIN DE L'ANNEE</h2>
             <p>Lorem ipsum dolor sit amet, altera sententia est, quae definit amicitiam paribus officiis ac voluntatibus.</p>
+            <button class="btn-vert">LIRE PLUS</button>
           </div>
         </div>
       </div>
@@ -83,8 +86,11 @@
         <img src="https://images.unsplash.com/photo-1518715099875-1cc34e55e2c4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="portrait2">
         <div class="card-actu-infos">
           <div>
+            <button class="btn-gris">04/03/2020</button>
+            <button class="btn-gris">Actualités</button>
             <h2>LEE JEFFRIES S'ILLUSTRE ENCORE EN NOIR ET BLANC !</h2>
             <p>Lorem ipsum dolor sit amet, altera sententia est, quae definit amicitiam paribus officiis ac voluntatibus.</p>
+            <button class="btn-vert">LIRE PLUS</button>
           </div>
         </div>
       </div>
